--- a/unit_1/css/style.css
+++ b/unit_1/css/style.css
@@ -1,5 +1,22 @@
 body {
-	background-color: AliceBlue;
+	background-color: LavenderBlush;
+	font-family: arial, helvetica, sans-serif; 
+	font-style: normal;
 }
-h1, p {color: gray;
+
+h1, p {text-align: center;
+}
+
+h1 {color: black;
+	font-size: 45px;
+	font-weight: lighter;
+	text-transform: uppercase;
+}
+
+p {color:dark gray;
+font-size: 25px;
+font-weight: normal;
+font-variant: small-caps;
+text-transform: lowercase;
+text-decoration-line: overline;
 }
