--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,7 +1,7 @@
 body {
 	font-family: arial, helvetica, sans-serif; 
 	font-style: normal;
-	background: url(/unit_3/images/homepagepattern.jpg);
+	background: url(images/homepagepattern.jpg);
 	background-size: cover; 
 }
 
