--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -2,6 +2,7 @@ body {
 background: url(../images/homepageimagebrick.jpg);
 background-size: cover;
 background-color: black; 
+background-repeat: no-repeat;
 }
 
 h1, h3 {
