--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,8 +1,12 @@
 body {
-background: url(../images/homepageimage.jpg);
+background: url(../images/homepageimagepattern.jpg);
 background-size: cover;
 background-color: black; 
 background-repeat: no-repeat;
+font-family: 'Bungee', cursive;
+font-family: 'Bungee Shade', cursive;
+font-family: 'Raleway Dots', cursive;
+font-family: 'Raleway', sans-serif;
 }
 
 h1, h3 {
@@ -11,8 +15,8 @@ text-align: center;
 
 h1#heading {
 color: black;
-font: 'Oslwald', sans-serif;
-font-size: 70px;
+font: 'Bungee Shade', Cursive;
+font-size: 70em;
 font-weight: lighter;
 text-transform: uppercase;
 padding-top: 300px;
@@ -20,7 +24,7 @@ padding-top: 300px;
 
 h3#slogan {
 color:gray;
-font: 'Droid Serif', serif;
+font: 'Raleway Dots', cursive;
 font-size: 25px;
 font-weight: normal;
 font-variant: small-caps;
@@ -36,7 +40,7 @@ div#hello {width: 90%;
 }
 
 button.fixedwidthbutton {
-    background-color: #4CAF50;
+    background-color: #4176cc;
     border: none;
     color: black;
     padding: 15px 32px;
@@ -45,4 +49,5 @@ button.fixedwidthbutton {
     display: inline-block;
     font-size: 16px;
     width:  200px;
+    font:'Raleway', sans-serif;
 }
