--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,12 +1,8 @@
 body {
-background: url(../images/homepageimagebrick.jpg);
+background: url(../images/homepageimage.jpg);
 background-size: cover;
 background-color: black; 
 background-repeat: no-repeat;
-font-family: 'Bungee', cursive;
-font-family: 'Bungee Shade', cursive;
-font-family: 'Raleway Dots', cursive;
-font-family: 'Raleway', sans-serif;
 }
 
 h1, h3 {
