--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -12,7 +12,7 @@ text-align: center;
 h1#heading {
 color: black;
 font: 'Bungee', Cursive;
-font-size: 70em;
+font-size: 70px;
 font-weight: lighter;
 text-transform: uppercase;
 padding-top: 300px;
