--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -40,7 +40,7 @@ div#hello {width: 90%;
 }
 
 button.fixedwidthbutton {
-    background-color: #4176cc;
+    background-color: #81a0d1;
     border: none;
     color: black;
     padding: 15px 32px;
