--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -3,6 +3,10 @@ background: url(../images/homepagepattern.jpg);
 background-size: cover;
 background-color: black; 
 background-repeat: no-repeat;
+font-family: 'Bungee', cursive;
+font-family: 'Bungee Shade', cursive;
+font-family: 'Raleway Dots', cursive;
+font-family: 'Raleway', sans-serif;
 }
 
 h1, h3 {
@@ -11,7 +15,7 @@ text-align: center;
 
 h1#heading {
 color: black;
-font-family: 'Bungee', Cursive;
+font-family: 'Bungee Shade', Cursive;
 font-size: 70px;
 font-weight: lighter;
 text-transform: uppercase;
