--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,5 +1,5 @@
 body {
-background: url(../images/homepagepattern.jpg);
+background: url(../images/homepageimagebrick.jpg);
 background-size: cover;
 background-color: black; 
 background-repeat: no-repeat;
