--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -19,14 +19,14 @@ font-family: 'Bungee Shade', Cursive;
 font-size: 70px;
 font-weight: lighter;
 text-transform: uppercase;
-padding-top: 100px;
+padding-top: 200px;
 }
 
 h3#slogan {
 color:gray;
 font-family: 'Raleway Dots', cursive;
-font-size: 25px;
-font-weight: normal;
+font-size: 50px;
+font-weight: bold;
 font-variant: small-caps;
 text-transform: lowercase;
 text-decoration-line: overline;
