--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -10,11 +10,11 @@ font-family: 'Raleway', sans-serif;
 font-family: 'Quicksand', sans-serif;
 }
 
-h1, h3 {
+h3, p {
 text-align: center;
 }
 
-h1#heading {
+h3#heading {
 color: black;
 font-family: 'Bungee', Cursive;
 font-size: 70px;
@@ -22,7 +22,7 @@ font-weight: lighter;
 text-transform: uppercase;
 }
 
-h3#slogan {
+p#slogan {
 color: #474c51;
 font-family: 'Quicksand', sans-serif;
 font-size: 65px;
