--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -25,7 +25,7 @@ padding-top: 200px;
 p#slogan {
 color: black;
 font-family: 'Quicksand', sans-serif;
-font-size: 65px;
+font-size: 1em;
 font-weight: bolder;
 font-variant: small-caps;
 text-transform: lowercase;
@@ -36,16 +36,16 @@ p {
     text-align: center;
     font-weight: bolder;
     color: black;
-    padding-right: 50px;
-    padding-left: 50px;
-    font-size: 40px;
+    padding-right: 25px;
+    padding-left: 25px;
+    font-size: 1em;
 }
 
 li {
     text-align: center;
     color: black;
     font-weight: bolder;
-    font-size: 40px;
+    font-size: 1em;
 }
 
 
@@ -62,7 +62,7 @@ button.fixedwidthbutton {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 40px;
+    font-size: 1em;
     width:  200px;
     font-family:'Raleway', sans-serif;
 }
