--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -25,7 +25,7 @@ padding-top: 200px;
 p#slogan {
 color: black;
 font-family: 'Quicksand', sans-serif;
-font-size: 3em;
+font-size: 5em;
 font-weight: bolder;
 font-variant: small-caps;
 text-transform: lowercase;
@@ -34,22 +34,22 @@ text-decoration-line: overline;
 
 p {
     text-align: center;
-    font-weight: bolder;
+    font-weight: bold;
     color: black;
     padding-right: 400px;
     padding-left: 400px;
-    font-size: 1em;
+    font-size: 3em;
 }
 
 ul {
-    list-style: none;
+    list-style-type: none;
 }
 
 li {
     text-align: center;
     color: black;
     font-weight: bolder;
-    font-size: 1em;
+    font-size: 3em;
 }
 
 
@@ -66,7 +66,7 @@ button.fixedwidthbutton {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 1em;
+    font-size: 3em;
     width:  200px;
     font-family:'Raleway', sans-serif;
 }
