--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -2,6 +2,7 @@ body {
 background: url(../images/homepageimage.jpg);
 background-size: cover;
 background-color: black; 
+opacity: 80%;
 background-repeat: no-repeat;
 font-family: 'Bungee', cursive;
 font-family: 'Bungee Shade', cursive;
