--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -36,7 +36,7 @@ text-decoration-line: overline;
 p {
     text-align: center;
     font-weight: bold;
-    color: black;
+    color: #ABFFF1;
     padding-right: 400px;
     padding-left: 400px;
     font-size: 1.5em;
