--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -21,7 +21,7 @@ font-family: 'Bungee', Cursive;
 font-size: 70px;
 text-transform: uppercase;
 padding-top: 200px;
-margin: 0;
+margin: 40px 0 0 0;
 }
 
 p#slogan {
