--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -72,3 +72,8 @@ button.fixedwidthbutton {
     width:  250px;
     font-family:'Quicksand', sans-serif;
 }
+
+a {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 1em;
+}
