--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -41,6 +41,7 @@ p {
     padding-right: 400px;
     padding-left: 400px;
     font-size: 1.5em;
+    font-family: 'Quicksand', sans-serif;
 }
 
 ul {
@@ -52,6 +53,7 @@ li {
     color: black;
     font-weight: normal;
     font-size: 1.5em;
+    font-family: 'Quicksand', sans-serif;
 }
 
 
