--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -36,7 +36,7 @@ margin: 0 0 40px 0;
 
 p {
     text-align: center;
-    font-weight: normal;
+    font-weight: bold;
     color: black;
     padding-right: 400px;
     padding-left: 400px;
@@ -51,7 +51,7 @@ ul {
 li {
     text-align: center;
     color: black;
-    font-weight: normal;
+    font-weight: bold;
     font-size: 1.5em;
     font-family: 'Quicksand', sans-serif;
 }
@@ -80,4 +80,5 @@ a {
     font-size: 1em;
     text-align: center;
     color: black;
+    align-content: center;
 }
