--- a/unit_4/style.css
+++ b/unit_4/style.css
@@ -1,34 +1,39 @@
 body {
-   background-color: black; 
    background: url(../images/homepagetiles.jpg);
    background-size: cover;
-   background-repeat: no-repeat;
+   background-repeat: repeat;
    font-family: 'Bungee', cursive;
    font-family: 'Bungee Shade', cursive;
    font-family: 'Quicksand', sans-serif;
    font-family: 'Bungee Inline', cursive;
 }
 
-div.homepage {
-   color: beige;
-}
 
 section.logo, section.recentwork, section.about, section.getintouch {
-   background-color: red;
-   size: 70%;
+  margin: 0 1.5% 24px 1.5%;
+  color: black;
 }
+
 
 nav {
    width: 100%;
    text-align: center;
+   color: beige;
 }
 
-div.homepagebutton {width: 90%; 
+a{
+   font-family: 'Quicksand', sans-serif;
+   color: white;
+   font-size: 10pt;
+}
+
+div#homepagebutton {
+   width: 90%; 
    margin: 0 auto 0 auto;
    text-align: center;
 }
 
-button.fixedwidthbutton {
+button#homepagebutton {
    background-color: #81a0d1;
    border: none;
    color: black;
@@ -84,4 +89,6 @@ p {
 footer {
    width: 100%;
    text-align: center;
+   margin-bottom: 0;
+   color: beige;
 }
