--- a/practice/css/style.css
+++ b/practice/css/style.css
@@ -13,9 +13,18 @@ div.logo {
    padding-bottom: 2em;
    text-align: center;
    width: 70%;
+   color: lightgray;
 }
 
 h1.title {
    font-family: 'Bungee Shade', sans-serif;
    font-size: 40pt; 
+   text-align: center;
+}
+
+h2.subtitle {
+   font-family: 'Quicksand', sans-serif;
+   font-size: 25pt;  
+   text-align: center;
+   color: black;
 }
