--- a/practice/css/style.css
+++ b/practice/css/style.css
@@ -8,7 +8,7 @@ body {
    font-family: 'Bungee Inline', cursive;
 }
 
-div.logo {
+div#logo {
    margin: 1em auto;
    padding-bottom: 2em;
    text-align: center;
@@ -16,15 +16,33 @@ div.logo {
    color: lightgray;
 }
 
-h1.title {
+h1#title {
    font-family: 'Bungee Shade', sans-serif;
    font-size: 40pt; 
    text-align: center;
 }
 
-h2.subtitle {
+h2#subtitle {
    font-family: 'Quicksand', sans-serif;
    font-size: 25pt;  
    text-align: center;
    color: black;
+}
+
+div.homepagebuttoncontainer {width: 90%; 
+  margin: 0 auto 0 auto;
+  text-align: center;
+}
+
+button.homepagebutton {
+    background-color: #81a0d1;
+    border: none;
+    color: black;
+    padding: 20px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.5em;
+    width:  250px;
+    font-family:'Quicksand', sans-serif;
 }
