--- a/practice/css/style.css
+++ b/practice/css/style.css
@@ -8,13 +8,6 @@ body {
    font-family: 'Bungee Inline', cursive;
 }
 
-div#logo {
-   margin: 1em auto;
-   padding-bottom: 2em;
-   text-align: center;
-   width: 70%;
-   color: lightgray;
-}
 
 h1#title {
    font-family: 'Bungee Shade', sans-serif;
@@ -29,12 +22,12 @@ h2#subtitle {
    color: black;
 }
 
-div.homepagebuttoncontainer {width: 90%; 
+div#homepagebuttoncontainer {width: 90%; 
   margin: 0 auto 0 auto;
   text-align: center;
 }
 
-button.homepagebutton {
+button#homepagebutton {
     background-color: #81a0d1;
     border: none;
     color: black;
