--- a/practice_2/css/style.css
+++ b/practice_2/css/style.css
@@ -17,10 +17,10 @@ text-align: center;
 
 h1 {
 color: black;
-font-family: 'Bungee Inline', Cursive;
+font-family: 'Bungee Shade', Cursive;
 font-size: 65pt;
 text-transform: uppercase;
-padding-top: 300px;
+padding-top: 250px;
 margin: 40px 0 0 0;
 }
 
