--- a/practice_2/css/style.css
+++ b/practice_2/css/style.css
@@ -32,7 +32,7 @@ font-weight: bold;
 font-variant: small-caps;
 text-transform: lowercase;
 text-decoration-line: overline;
-margin: 0 0 40px 0;
+margin: 40px 0 40px 0;
 }
 
 div {width: 90%; 
