--- a/practice_2/css/style.css
+++ b/practice_2/css/style.css
@@ -16,8 +16,7 @@ text-align: center;
 }
 
 h1 {
-color: black;
-font-family: 'Bungee Shade', Cursive;
+font-family: 'Bungee Inline', Cursive;
 font-size: 65pt;
 text-transform: uppercase;
 padding-top: 250px;
