--- a/practice_2/css/style.css
+++ b/practice_2/css/style.css
@@ -1,6 +1,6 @@
 body {
 background: url(../images/wooddesk.jpg);
-background-size: 100%;
+background-size: cover;
 background-color: black; 
 opacity: 80%;
 background-repeat: no-repeat;
