--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -1,94 +1,56 @@
 body {
-   background: url(../images/homepagetiles.jpg);
-   background-size: cover;
-   background-repeat: repeat;
-   font-family: 'Bungee', cursive;
-   font-family: 'Bungee Shade', cursive;
-   font-family: 'Quicksand', sans-serif;
-   font-family: 'Bungee Inline', cursive;
+background: url(../images/whitedesk.jpg);
+background-size: cover;
+background-color: black; 
+opacity: 80%;
+background-repeat: no-repeat;
+background-position: center;
+font-family: 'Bungee', cursive;
+font-family: 'Bungee Shade', cursive;
+font-family: 'Quicksand', sans-serif;
+font-family: 'Bungee Inline', cursive;
+font-family: 'Raleway', sans-serif;
 }
 
-
-section.logo, section.recentwork, section.about, section.getintouch {
-  margin: 24px 1.5% 24px 1.5%;
-  color: black;
+h1, p {
+text-align: center;
 }
 
-
-nav {
-   width: 100%;
-   text-align: center;
-   color: beige;
+h1 {
+font-family: 'Bungee Inline', Cursive;
+font-size: 65pt;
+text-transform: uppercase;
+padding-top: 175px;
+margin: 40px 0 0 0;
+color: black;
 }
 
-a{
-   font-family: 'Quicksand', sans-serif;
-   color: white;
-   font-size: 10pt;
+p#slogan {
+color: black;
+font-family: 'Quicksand', sans-serif;
+font-size: 36pt;
+font-weight: bold;
+font-variant: small-caps;
+text-transform: lowercase;
+text-decoration-line: overline;
+margin: 40px 0 40px 0;
 }
 
-div#homepagebutton {
-   width: 90%; 
-   margin: 0 auto 0 auto;
-   text-align: center;
+div {width: 90%; 
+  margin: 0 auto 0 auto;
+  text-align: center;
 }
 
-button#homepagebutton {
-   background-color: #81a0d1;
-   border: none;
-   color: black;
-   padding: 20px 32px;
-   text-align: center;
-   text-decoration: none;
-   display: inline-block;
-   font-size: 12pt;
-   width:  250px;
-   font-family:'Quicksand', sans-serif;
-}
-
-
-h1.title {
-   font-family: 'Bungee Shade', Cursive;
-   font-size: 35pt;
-   text-transform: uppercase;
-   text-align: center;
-   padding-top: 200px;
-   margin: 40px 0 0 0;
-}
-
-
-h2.subtitle {
-   color: white;
-   font-family: 'Quicksand', sans-serif;
-   font-size: 20pt;
-   font-weight: bold;
-   font-variant: small-caps;
-   text-transform: lowercase;
-   text-decoration-line: overline;
-   margin: 0 0 40px 0;
-   text-align: center;
-}
-
-
-h3 {
-   font-family: 'Quicksand', sans-serif;
-   font-size: 16pt; 
-   color: white;
-}
-
-
-
-p {
-   font-family: 'Quicksand', sans-serif;
-   text-align: center;
-   color: white; 
-   font-size: 12pt;
-}
-
-
-footer {
-   width: 100%;
-   text-align: center;
-   margin-bottom: 0;
-   color: beige;
+button.fixedwidthbutton {
+    background-color: #81a0d1;
+    border: none;
+    color: black;
+    padding: 20px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16pt;
+    width:  250px;
+    font-family:'Quicksand', sans-serif;
+    margin: 2% 2% 2% 2%
 }
