--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -1,13 +1,12 @@
 body {
-      font-family: 'Bungee', cursive;
-      font-family: 'Bungee Shade', cursive;
       font-family: 'Quicksand', sans-serif;
-      font-family: 'Bungee Inline', cursive;
       text-align: center;
    }
 
 div.wrapper {
    margin: 0 auto;
+   width: 100%;
+   max-width: 1024px;
 }
 
 header {
@@ -22,6 +21,10 @@ nav {
    background-color: #E8C66A;
    border: 1px solid black;
    padding: 20px;
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
 }
 
 
