--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -1,6 +1,16 @@
+*, *:before, *:after {
+   margin: 0;
+   padding: 0;
+   -moz-box-sizing: border-box;
+   -webkit-box-sizing: border-box;
+   box-sizing: border-box;
+}
+
 body {
       font-family: 'Quicksand', sans-serif;
       text-align: center;
+      padding-top: 130px;
+
    }
 
 div.wrapper {
