--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -6,35 +6,60 @@
    box-sizing: border-box;
 }
 
-body {
-      font-family: 'Quicksand', sans-serif;
-      text-align: center;
-      padding-top: 130px;
 
+body {
+   font-family: 'Josefin Slab', sans-serif;
+   text-align: center;
    }
 
-div.wrapper {
-   margin: 0 auto;
-   width: 100%;
-   max-width: 1024px;
-}
 
 header {
-      background-image: url(../images/whitedesk.jpg);
-      background-repeat: no-repeat;
-      background-size: cover;
-      border: none;
+   border: none;
+   width: 100%;
+   height: 25em
+   margin: 0;
+   padding: 0;
    }
+
+#hero {
+
+   background: url(.../images/whitedesk.jpg) no-repeat center center fixed;
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+   background-size: cover;
+}
+
+h1, h2 {
+   font-size: 2em;
+   display: block;
+   font-weight: bold;
+   text-align: center
+   padding-top: 15%;
+}
+
+
+h1 {
+   font-size: 2em;
+   letter-spacing: 1px;
+   text-transform: uppercase;
+}
+
+
+h2 {
+   font-size: 1.25em;
+}
 
 
 nav {
-   background-color: #E8C66A;
-   border: 1px solid black;
-   padding: 20px;
-   position: fixed;
-   top: 0;
-   left: 0;
+   font-size: 1em;
+   background-color: none;
+   border-bottom: 1px;
+   display: inline-block;
+   padding: 1em 0;
    width: 100%;
+   text-align: center;
+   margin: auto;
 }
 
 
@@ -42,10 +67,11 @@ section#logo, section#recentwork, section#about, section#getintouch {
    background-color: none;
    border: 1px solid black;
    padding: 0 0;
+   width: 100%;
 }
 
 #left {
-   background-color: #E582A2;
+   background-color: none;
    border: 1px black solid;
    padding: 20px;
    float: left;
@@ -54,7 +80,7 @@ section#logo, section#recentwork, section#about, section#getintouch {
 
 
 #middle {
-   background-color: #E55B88;
+   background-color: none;
    border: 1px black solid;
    padding: 20px;
    float: left;
@@ -63,7 +89,7 @@ section#logo, section#recentwork, section#about, section#getintouch {
 
 
 #right {
-   background-color: #E55B88;
+   background-color: none;
    border: 1px black solid;
    padding: 20px;
    float: right;
@@ -87,7 +113,8 @@ height: 0;
 
 
 footer {
-   background-color: #FF957E;
+   background-color: none;
    border: 1px solid black;
    padding: 20px;
+   width: 100%;
 }
