--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -1,33 +1,32 @@
-*, *:before, *:after {
+* {
    margin: 0;
    padding: 0;
-   -moz-box-sizing: border-box;
-   -webkit-box-sizing: border-box;
    box-sizing: border-box;
 }
 
 
 body {
    font-family: 'Josefin Slab', sans-serif;
+   background-color: gray;
    text-align: center;
+   font-size: 16px;
+   position: relative;
    }
 
-
-header {
-   border: none;
-   width: 100%;
-   height: 25em
-   margin: 0;
-   padding: 0;
-   }
 
 #hero {
-
-   background: url(.../images/whitedesk.jpg) no-repeat center center fixed;
+   background: url(.../images/whitedesk.jpg) no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
+   height: 750px;
+   padding-bottom: 20px 0;
+}
+
+
+header {
+   padding: 0 200px;
 }
 
 h1, h2 {
@@ -52,48 +51,48 @@ h2 {
 
 
 nav {
-   font-size: 1em;
-   background-color: none;
-   border-bottom: 1px;
-   display: inline-block;
-   padding: 1em 0;
-   width: 100%;
-   text-align: center;
    margin: auto;
+   text-align: center;
 }
 
+nav a:link{  
+   font-family: 'Raleway', sans-serif;
+   color:#fff;
+   padding:0 32px;
+   font-size: .8em;
+   text-align: center;
+   text-transform: uppercase;
+   letter-spacing: 2px;
+   -webkit-transition:color ease-in-out .5s;
+   -moz-transition:color ease-in-out .5s;
+   -o-transition:color ease-in-out .5s;
+   transition:color ease-in-out .5s;
+}
+
+nav a:visited{
+   color: #fff;
+}
+
+nav a:hover{
+   color: #C400C4;
+}
+
+nav a:active{
+   color: #C400C4;
+}
 
 section#logo, section#recentwork, section#about, section#getintouch {
    background-color: none;
    border: 1px solid black;
-   padding: 0 0;
+   padding: 10px 0;
    width: 100%;
 }
 
-#left {
-   background-color: none;
-   border: 1px black solid;
-   padding: 20px;
+#left, #middle, #right {
+   padding: 1%;
    float: left;
    width: 33%;
-}
-
-
-#middle {
-   background-color: none;
-   border: 1px black solid;
-   padding: 20px;
-   float: left;
-   width: 33%;
-}
-
-
-#right {
-   background-color: none;
-   border: 1px black solid;
-   padding: 20px;
-   float: right;
-   width: 33%;
+   margin: 1%;
 }
 
 
@@ -118,3 +117,32 @@ footer {
    padding: 20px;
    width: 100%;
 }
+
+
+@media only screen and (max-width: 720px){}
+#left, #middle, #right {
+   width: 48%;
+   height: 300px;
+ 
+}
+
+@media screen and (max-width:750px){
+   nav{
+      display: none;
+   }
+
+   nav a:link{
+      display: block;
+      padding:15px;
+      margin:5px;
+   }
+
+   h1{
+      margin:40px 0 0;
+   }
+
+   header{
+      padding:0 2%;
+   }
+
+   }
