--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -7,45 +7,75 @@
 
 body {
    font-family: 'Josefin Slab', sans-serif;
-   background-color: gray;
    text-align: center;
    font-size: 16px;
    position: relative;
    }
 
 
-#hero {
-   background: url(.../images/whitedesk.jpg) no-repeat center center scroll;
+#lander {
+   background: url(../images/whitedesk.jpg) no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
-   height: 750px;
+   height: 56.25vw;
    padding-bottom: 20px 0;
+}
+
+img {
+   width: 100%;
+   max-width: 100%;
+   display: block;
 }
 
 
 header {
-   padding: 0 200px;
+   padding: 100px 100px 0 100px;
 }
 
 h1, h2 {
-   font-size: 2em;
    display: block;
    font-weight: bold;
    text-align: center
-   padding-top: 15%;
+   padding-top: 25%;
+   padding-bottom: 2%;
+   color: #33302E;
 }
 
 
 h1 {
-   font-size: 2em;
+   font-size: 3em;
    letter-spacing: 1px;
    text-transform: uppercase;
 }
 
 
 h2 {
+   font-size: 1.75em;
+}
+
+h3 {
+   font-size: 2em;
+   padding: 2%;
+   color: #33302E;
+}
+
+h4 {
+   padding: 1%;
+   font-size: 1em;
+}
+
+p.copyright {
+   font-family: 'Raleway', sans-serif;
+   letter-spacing: 2px;
+   color: #33302E;
+   text-align: right;
+}
+
+figcaption {
+   padding: 2%;
+   color: #33302E;
    font-size: 1.25em;
 }
 
@@ -57,42 +87,61 @@ nav {
 
 nav a:link{  
    font-family: 'Raleway', sans-serif;
-   color:#fff;
-   padding:0 32px;
+   color: #5c5753;
+   padding: 0 32px;
    font-size: .8em;
    text-align: center;
    text-transform: uppercase;
-   letter-spacing: 2px;
+   letter-spacing: 4px;
+   text-decoration: none;
    -webkit-transition:color ease-in-out .5s;
    -moz-transition:color ease-in-out .5s;
    -o-transition:color ease-in-out .5s;
    transition:color ease-in-out .5s;
 }
 
-nav a:visited{
-   color: #fff;
-}
+ nav a:visited {
+   color: #5c5753;
+ }
 
 nav a:hover{
-   color: #C400C4;
+   color: #b76e79;
 }
 
+
 nav a:active{
-   color: #C400C4;
+   color: #5c5753;
+}
+
+a:link {
+   text-decoration: underline;
+   color: #33302E;
+   padding: 1%;
 }
 
 section#logo, section#recentwork, section#about, section#getintouch {
-   background-color: none;
-   border: 1px solid black;
+   border: none;
    padding: 10px 0;
    width: 100%;
 }
 
+section#recentwork {
+   background-color: #7E7F7F;
+}
+
+section#about {
+   background-color: #B8BABA;
+}
+
+section#getintouch {
+   background-color: #E5E8E8;
+}
+
+
 #left, #middle, #right {
    padding: 1%;
    float: left;
-   width: 33%;
-   margin: 1%;
+   width: 33.333%;
 }
 
 
@@ -112,31 +161,22 @@ height: 0;
 
 
 footer {
-   background-color: none;
-   border: 1px solid black;
+   background-color: #d0a1a8;
+   border: none;
    padding: 20px;
    width: 100%;
+   margin: 0;
 }
 
-
-@media only screen and (max-width: 1600px){}
-#left, #middle, #right {
-   width: 33%;
-   height: 300px;
- 
-}
-
-
-@media only screen and (max-width: 650px){}
-#left, #middle, #right {
-   width: 48%;
-   height: 300px;
- 
-}
 
 @media screen and (max-width:750px){
    nav{
-      display: none;
+      height: 0;
+      overflow: hidden;
+   }
+
+   nav {
+      height: 100px;
    }
 
    nav a:link{
@@ -146,17 +186,26 @@ footer {
    }
 
    h1{
-      margin:40px 0 0;
+      padding:40px 0 0;
    }
 
    header{
       padding:0 2%;
    }
 
+}
+
+
+@media only screen and (max-width: 650px){
+#left, #middle, #right {
+   width: 50%;
+  }
+}
+
+
    @media screen and (max-width: 500px){
      #left, #middle, #right {
-   width: 80%;
-   height: 300px; 
+   width: 100%; 
+   margin: 0 auto;
    }
-
-   }
+}
